--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -12,7 +12,7 @@ services:
     
     # Set up the web server according to the Dockerfile inside the api/ folder
     build: flask-app/
-    container_name: web
+    container_name: web1
     # connect the src folder in on the host machine to the code folder in the container. 
     # note that the code folder in contaier is the working directory (see DockerFile).
     volumes: ['./flask-app:/code', './secrets:/secrets'] 
@@ -33,7 +33,7 @@ services:
   db:
     # We are using the base image of MySQL v.8
     image: mysql:8
-    container_name: db
+    container_name: db1
     volumes:
       # anything in (or mounted in) /docker-entrypoint-initdb.d in the container 
       # will automatically be executed when the container is created
@@ -62,15 +62,15 @@ services:
 
   ##################################################################
   # configure the AppSmith container (borrowed directly from Appsmith)
-#   appsmith:
-#     image: index.docker.io/appsmith/appsmith-ce
-#     container_name: appsmith
-#     ports:
-#       - "8080:80"
-#       - "4443:443"
-#     volumes:
-#       - ./stacks:/appsmith-stacks
-#     restart: unless-stopped
+    appsmith:
+      image: index.docker.io/appsmith/appsmith-ce
+      container_name: appsmith1
+      ports:
+        - "8080:80"
+        - "4443:443"
+      volumes:
+        - ./stacks:/appsmith-stacks
+      restart: unless-stopped
 
 secrets:
   secret_db_pw:
